Fixed card-star and add button z-index conflict on dashbord

--- a/frontend/src/app/modules/dashboard/components/project-card/project-card.component.sass
+++ b/frontend/src/app/modules/dashboard/components/project-card/project-card.component.sass
@@ -16,9 +16,6 @@
     vertical-align: center
     text-align: right
 
-.star, .menu-icon
-    z-index: 2
-
 .imgContainer h2
     position: absolute
     left: 25px
